--- a/index.html
+++ b/index.html
@@ -50,52 +50,75 @@
 				marketing and data-science domains. Possessing strong practical competencies
 				rooted in substantial training as a neuroscientist.
 				</p>
-				<a href="https://fr.linkedin.com/in/bastienchappis" class="btn-blue">Visit my profile</a>	
+				<a href="https://fr.linkedin.com/in/bastienchappis" class="btn-blue" target="_blank">LinkedIn Profile</a>	
 			</div>
 
 			<div class="card-white" id="education">
 				<h2>Education</h2>
-				<p>balbalbalbablablaerezregnzo</p>
+				<ul class="list-flex">
+					<li><img class="img-icon" src="images/univ_paris.png">
+					<li><img class="img-icon" src="images/univ_bordeaux.png"></li>
+					<li><img class="img-icon" src="images/univ_singapore.png"></li>
+					<li><img class="img-icon" src="images/univ_grenoble.png"></li>
+				</ul>
 			</div>
 
 			<div class="card-white-left" id="experiences">
 				<h2>Experience</h2>
-				<p>because its very</p>
 				<ul>
-					<li><img class="img-icon" src="images/univ_paris.png">
-						<p>i first started by the university of blaboa</p></li>
-					<li><img class="img-icon" src="images/univ_bordeaux.png"></li>
-					<li><img class="img-icon" src="images/univ_singapore.png"></li>
-					<li><img class="img-icon" src="images/univ_grenoble.png"></li>
-				</ul>	
+					<li><p><b>Junior consultant as XNode, Shanghai (China)</b></p>
+					<p><i>XNODE is an accelerator helping startups and corporates to gain a valuable understanding of the Chinese business ecosystem.</i></p>
+					<p>• Coordinated the audit XNODE in order to address their branding strategy.</p>
+					<p>• Identified the most relevant accelerators’ KPIs.</p>
+					<p>• Administered the measurement of XNODE - accelerator’s impact and relevance in the Chinese ecosystem.</p>
+					<p>• Created a database including corporates, startups and investors partners in order to obtain quantifiable evidence regarding the created value.</p>
+					</li>
+					<li><p><b>Freelance internet ad assessor at Lionbridge, Bordeaux (France)</b></p>
+					<p>• Participated in the enhancement of Human relevance systems related to Microsoft and Google technologies.</p>
+					<p>• Evaluated web content under diversified forms in order to improve it’s relevance to the user.</p>
+					</li>
+					<li><p><b>Intern researcher at neurocentre magendie, Bordeaux (France)</b></p>
+					<p><i>The Neurocentre Magendie is a dynamic scientific research pole of Bordeaux Neurocampus. It gathers more than 220 researchers distributed among
+					11 teams dedicated to the understanding of the cerebral system.</i></p>
+					<p>• Designed a precise 6-month research plan and protocol for measuring intracerebral neuronal electrical activity.</p>
+					<p>• Strengthened my expertise in ex-vivo patch clamp recordings, one of the hardest technical skill of the neuroscience domain.</p>
+					<p>• Collected and analyze hundreds of neuronal recordings, reporting decisive the key factors of memory impairments during fear conditioning.</p>
+					</li>
+				</ul>
+				
+				
 			</div>
 
 			<div class="card-white" id="references">
 				<h2>References</h2>
-				<p>because its very</p>	
+				<p><a href="https://neurocentre-magendie.fr/recherche/Frick/descriptionTeam.php" target="_blank">Andreas Frick</a></p>
+				<a href="https://neurocentre-magendie.fr/recherche/Deroche/descriptionTeam.php" target="_blank">Véronqique Deroche-Gamonet</a>
 			</div>
 
-			<div class="card-white" id="skills">
+			<div class="card-white-left" id="skills">
 				<h2>Skills</h2>
-				<p>because its very</p>	
+				<ul>
+					<li><b>IT:</b> Proficient in Excel, Power Point, Word, Illustrator, Tableau. Working knowledge of SQL, Python, R, HTML, CSS and PowerBI.</li>
+					<li><b>Languages:</b> French (native), English (fluent), Spanish (intermediate), Chinese (basic)</li>
+				</ul>	
 			</div>
 
 			<div class="card-white" id="interests">
 				<h2>Interests</h2>
-				<p>because its very</p>	
+				<p>Sport | Music | Movies | Video Games</p>	
 			</div>
 
 			<div class="card-white">
 				<ul class="list-inline">
-					<li><a href="#" target="_blank">
+					<li><a href="https://fr.linkedin.com/in/bastienchappis" target="_blank">
 						<i class="fab fa-linkedin"></i>
 					</a>
 					</li>
-					<li><a href="#" target="_blank">
+					<li><a href="https://github.com/bastienchappis" target="_blank">
 						<i class="fab fa-github-alt"></i>
 					</a>
 					</li>
-					<li><a href="#" target="_blank">
+					<li><a href="https://www.tableau.com/fr-fr" target="_blank">
 						<i class="fas fa-plus"></i>
 					</a>
 					</li>
