--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			<div class="card-white" id="references">
 				<h2>References</h2>
 				<p><a href="https://neurocentre-magendie.fr/recherche/Frick/descriptionTeam.php" target="_blank">Andreas Frick</a></p>
-				<a href="https://neurocentre-magendie.fr/recherche/Deroche/descriptionTeam.php" target="_blank">Véronqique Deroche-Gamonet</a>
+				<a href="https://neurocentre-magendie.fr/recherche/Deroche/descriptionTeam.php" target="_blank">Véronique Deroche-Gamonet</a>
 			</div>
 
 			<div class="card-white-left" id="skills">
